--- a/.aws/peerprep-stack.yaml
+++ b/.aws/peerprep-stack.yaml
@@ -1244,7 +1244,7 @@ Resources:
     Properties:
       MinCapacity: !Ref MinContainers
       MaxCapacity: !Ref MaxContainers
-      ResourceId: !Join ['/', [service, !Ref ECSDevCluster, !GetAtt ServiceDevAuth.Name]]
+      ResourceId: !Join ['/', [service, !Ref ECSProdCluster, !GetAtt ServiceProdAuth.Name]]
       ScalableDimension: ecs:service:DesiredCount
       ServiceNamespace: ecs
       RoleARN: !GetAtt AutoScalingRole.Arn
@@ -1254,7 +1254,7 @@ Resources:
     Properties:
       MinCapacity: !Ref MinContainers
       MaxCapacity: !Ref MaxContainers
-      ResourceId: !Join ['/', [service, !Ref ECSDevCluster, !GetAtt ServiceDevUser.Name]]
+      ResourceId: !Join ['/', [service, !Ref ECSProdCluster, !GetAtt ServiceProdUser.Name]]
       ScalableDimension: ecs:service:DesiredCount
       ServiceNamespace: ecs
       RoleARN: !GetAtt AutoScalingRole.Arn
@@ -1262,7 +1262,7 @@ Resources:
   AutoScalingPolicyProdQuestion:
     Type: AWS::ApplicationAutoScaling::ScalingPolicy
     Properties:
-      PolicyName: !Join ['', [!GetAtt ServiceDevQuestion.Name, '-AutoScalingPolicy']]
+      PolicyName: !Join ['', [!GetAtt ServiceProdQuestion.Name, '-AutoScalingPolicy']]
       PolicyType: TargetTrackingScaling
       ScalingTargetId: !Ref AutoScalingTargetProdQuestion
       TargetTrackingScalingPolicyConfiguration:
@@ -1273,7 +1273,7 @@ Resources:
   AutoScalingPolicyProdMatching:
     Type: AWS::ApplicationAutoScaling::ScalingPolicy
     Properties:
-      PolicyName: !Join ['', [!GetAtt ServiceDevMatching.Name, '-AutoScalingPolicy']]
+      PolicyName: !Join ['', [!GetAtt ServiceProdMatching.Name, '-AutoScalingPolicy']]
       PolicyType: TargetTrackingScaling
       ScalingTargetId: !Ref AutoScalingTargetProdMatching
       TargetTrackingScalingPolicyConfiguration:
@@ -1284,7 +1284,7 @@ Resources:
   AutoScalingPolicyProdAuth:
     Type: AWS::ApplicationAutoScaling::ScalingPolicy
     Properties:
-      PolicyName: !Join ['', [!GetAtt ServiceDevAuth.Name, '-AutoScalingPolicy']]
+      PolicyName: !Join ['', [!GetAtt ServiceProdAuth.Name, '-AutoScalingPolicy']]
       PolicyType: TargetTrackingScaling
       ScalingTargetId: !Ref AutoScalingTargetProdAuth
       TargetTrackingScalingPolicyConfiguration:
@@ -1295,14 +1295,13 @@ Resources:
   AutoScalingPolicyProdUser:
     Type: AWS::ApplicationAutoScaling::ScalingPolicy
     Properties:
-      PolicyName: !Join ['', [!GetAtt ServiceDevUser.Name, '-AutoScalingPolicy']]
+      PolicyName: !Join ['', [!GetAtt ServiceProdUser.Name, '-AutoScalingPolicy']]
       PolicyType: TargetTrackingScaling
       ScalingTargetId: !Ref AutoScalingTargetProdUser
       TargetTrackingScalingPolicyConfiguration:
         PredefinedMetricSpecification:
           PredefinedMetricType: ECSServiceAverageCPUUtilization
         TargetValue: !Ref AutoScalingTargetValue
-
 
   #=================================== 
   # Cognito 
