--- a/backend/matching-service/package.json
+++ b/backend/matching-service/package.json
@@ -20,6 +20,7 @@
     "pino": "^8.15.1",
     "pino-http": "^8.5.0",
     "socket.io": "^4.7.2",
+    "typescript": "^5.2.2",
     "zod": "^3.22.2"
   },
   "devDependencies": {
@@ -33,7 +34,6 @@
     "pino-prettier": "^1.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-node": "^10.9.1"
   }
 }
