--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -24,6 +24,7 @@
     "pino": "^8.16.0",
     "pino-http": "^8.5.0",
     "prisma": "^5.3.1",
+    "typescript": "^5.2.2",
     "zod": "^3.22.2"
   },
   "devDependencies": {
@@ -37,7 +38,6 @@
     "pino-prettier": "^1.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-node": "^10.9.1"
   }
 }
