--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.4.1",
+    "typescript": "^5.2.2",
     "zod": "^3.22.2"
   },
   "devDependencies": {
@@ -37,7 +38,6 @@
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-node": "^10.9.1"
   }
 }
