--- a/backend/question-service/Dockerfile
+++ b/backend/question-service/Dockerfile
@@ -1,5 +1,18 @@
+# Stage 1: Build environment
+FROM node:20 AS build
+WORKDIR /app
+
+# Copy the source code and install dependencies
+COPY package*.json ./
+RUN npm install --include=dev
+COPY . .
+RUN npm run build 
+
+# Stage 2: Production environment
 FROM node:20
-# Defing service arguments
+WORKDIR /app
+
+# Define service arguments
 ARG NODE_ENV
 ENV NODE_ENV=$NODE_ENV
 
@@ -9,24 +22,23 @@ ENV LOG_LEVEL=$LOG_LEVEL
 ARG CORS_ALLOWED_ORIGINS=http://localhost:3000
 ENV CORS_ALLOWED_ORIGINS=$CORS_ALLOWED_ORIGINS
 
-ENV AUTH_ENDPOINT="auth/api/validate"
-ENV AUTH_ADMIN_ENDPOINT="${AUTH_ENDPOINT}Admin"
-
 ARG PORT=5100
+ENV PORT=$PORT
 EXPOSE $PORT
 
-# Defing service specific arguments
+# Define service specific arguments
 ARG DATABASE_URL
 ENV DATABASE_URL=$DATABASE_URL
 
-# Build steps
-WORKDIR /app
-COPY . .
-RUN npm install
+# Copy only the production artifacts from the build stage
+COPY --from=build /app/dist ./dist
+COPY --from=build /app/package*.json ./
+COPY --from=build /app/src/models/prisma/ ./src/models/prisma/
+RUN npm install --omit=dev
 RUN npx prisma generate
-RUN npm run build
 
-COPY package*.json ./
+# Expose the application's port
+EXPOSE $PORT
 
 # Run image
 CMD ["node", "dist/app.js"]
