--- a/backend/user-service/Dockerfile
+++ b/backend/user-service/Dockerfile
@@ -1,4 +1,17 @@
+# Stage 1: Build environment
+FROM node:20 AS build
+WORKDIR /app
+
+# Copy the source code and install dependencies
+COPY package*.json ./
+RUN npm install --include=dev
+COPY . .
+RUN npm run build 
+
+# Stage 2: Production environment
 FROM node:20
+WORKDIR /app
+
 # Defing service arguments
 ARG NODE_ENV
 ENV NODE_ENV=$NODE_ENV
@@ -12,7 +25,7 @@ ENV CORS_ALLOWED_ORIGINS=$CORS_ALLOWED_ORIGINS
 ENV AUTH_ENDPOINT="${GATEWAY}/${NODE_ENV}/auth/api/validate"
 
 ARG PORT=5005
-EXPOSE $PORT
+ENV PORT=$PORT
 
 # Defing service specific arguments
 ARG DATABASE_URL
@@ -21,14 +34,15 @@ ENV DATABASE_URL=$DATABASE_URL
 ARG EMAIL_VERIFICATION_SECRET
 ENV EMAIL_VERIFICATION_SECRET=$EMAIL_VERIFICATION_SECRET
 
-# Build steps
-WORKDIR /app
-COPY . .
-RUN npm install
+# Copy only the production artifacts from the build stage
+COPY --from=build /app/dist ./dist
+COPY --from=build /app/package*.json ./
+COPY --from=build /app/src/models/prisma/ ./src/models/prisma/
+RUN npm install --omit=dev
 RUN npx prisma generate
-RUN npm run build
 
-COPY package*.json ./
+# Expose the application's port
+EXPOSE $PORT
 
 # Run image
 CMD ["node", "dist/app.js"]
