--- a/.aws/amplify.yaml
+++ b/.aws/amplify.yaml
@@ -7,6 +7,7 @@ applications:
             - npm install
         build:
           commands:
+            - echo "Build[${BUILD_ENV}] Gateway[${ENDPOINT}]"
             - npm run build
       artifacts:
         baseDirectory: .next
