--- a/backend/question-service/package.json
+++ b/backend/question-service/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app.ts | pino-pretty",
-    "build": "tsc -p .",
+    "build": "tsc -p tsconfig.build.json",
     "start": "node dist/app.js",
     "test": "jest"
   },
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.3.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -23,10 +24,10 @@
     "pino": "^8.16.0",
     "pino-http": "^8.5.0",
     "prisma": "^5.3.1",
+    "typescript": "^5.2.2",
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@prisma/client": "^5.3.1",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
@@ -37,7 +38,6 @@
     "pino-prettier": "^1.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-node": "^10.9.1"
   }
 }
